--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ h3 { font-size: 18px;
      color: #3c6478;
 }
 h2, h3 { margin-top: 5px }
-a { color: #4d809a;
+a { color: #558ca8;
     display: inline-block;
     text-decoration: none;
     padding:2px 4px;
